--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,7 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17.0.12
+org.gradle.java.installations.auto-download=false
+org.gradle.java.installations.paths=C:\\Program Files\\Java\\jdk-17.0.12
