--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/messaging": "^23.4.0",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.0.15",
@@ -30,8 +33,10 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.13.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "victory-native": "^41.20.1"
   },
